<resources>
    <string name="ram_app_name">人人</string>
    <string name="ram_item_label">人人</string>
    <string name="ram_auth_token_label">人人</string>
    <string name="ram_only_one_account_allow_title">仅允许创建一个人人账户</string>
    <string name="ram_only_one_account_allow_msg">已经存在一个人人账户</string>
    <string name="ram_auth_error_dialog_title">错误</string>
    <string name="ram_auth_error_dialog_message">网络连接错误，是否重试？</string>
    <string name="ram_prepare_auth_page">正在准备授权...</string>
    <string name="ram_prepare_authing">正在授权...</string>
    <string name="permlab_downloadManager">Access download manager.</string>
    <string name="permdesc_downloadManager">Allows the application to access the download manager and to use it to download files. Malicious applications can use this to disrupt downloads and access private information.</string>
    <string name="permlab_downloadManagerAdvanced">Advanced download manager functions.</string>
    <string name="permdesc_downloadManagerAdvanced">"Allows the application to access the download manager's advanced functions. Malicious applications can use this to disrupt downloads and access private information."</string>
    <string name="permlab_downloadCompletedIntent">Send download notifications.</string>
    <string name="permdesc_downloadCompletedIntent">Allows the application to send notifications about completed downloads. Malicious applications can use this to confuse other applications that download files.</string>
    <string name="permlab_downloadCacheNonPurgeable">Reserve space in the download cache</string>
    <string name="permdesc_downloadCacheNonPurgeable">Allows the application to download files to the download cache which cannot be automatically deleted when the download manager needs more space.</string>
    <string name="permlab_accessAllDownloads">Access all system downloads</string>
    <string name="permdesc_accessAllDownloads">Allows the application to view and modify all initiated by any application on the system.</string>
    <string name="download_unknown_title">&lt;Untitled></string>
    <string name="notification_filename_separator">", "</string>
    <string name="notification_filename_extras">" and %d more"</string>
    <string name="notification_download_complete">Download complete</string>
    <string name="notification_download_failed">Download unsuccessful</string>
    <string name="notification_need_wifi_for_size">Download size requires Wi-Fi</string>
    <string name="wifi_required_title">Download too large for operator network</string>
    <string name="wifi_required_body" formatted="false">"You must use WiFi to complete this %s download. 

Click %s to begin this download the next time you are connected to a WiFi network."</string>
    <string name="wifi_recommended_title">Queue for download later?</string>
    <string name="wifi_recommended_body" formatted="false">"Starting this %s download now may shorten your battery life and/or result in excessive usage of your mobile data connection, which can lead to charges by your mobile operator depending on your data plan.

 Click %s below to begin this download the next time you are connected to a WiFi network."</string>
    <string name="button_queue_for_wifi">Queue</string>
    <string name="button_cancel_download">Cancel</string>
    <string name="button_start_now">Start now</string>
    <string name="download_title">Downloads</string>
    <string name="no_downloads">No downloads.</string>
    <string name="missing_title">&lt;Unknown></string>
    <string name="download_menu_sort_by_size">Sort by size</string>
    <string name="download_menu_sort_by_date">Sort by time</string>
    <string name="download_queued">Queued</string>
    <string name="download_running">In progress</string>
    <string name="download_paused">Paused</string>
    <string name="download_success">Complete</string>
    <string name="download_error">Failed</string>
    <string name="dialog_title_not_available">Download Failed</string>
    <string name="dialog_failed_body">Do you want to retry downloading the file later or delete it from the queue?</string>
    <string name="dialog_running_body">Do you want to pause downloading the file or cancel it from the queue?</string>
    <string name="dialog_paused_body">Do you want to resume downloading the file or delete it from the queue?</string>
    <string name="dialog_title_queued_body">File not yet available</string>
    <string name="dialog_queued_body">This file is queued for future download.</string>
    <string name="dialog_file_missing_body">The downloaded file cannot be found.</string>
    <string name="dialog_insufficient_space_on_external">Cannot finish download. There is not enough space on external storage.</string>
    <string name="dialog_insufficient_space_on_cache">Cannot finish download. There is not enough space on internal download storage.</string>
    <string name="dialog_cannot_resume">Download interrupted. It cannot be resumed.</string>
    <string name="dialog_file_already_exists">annot download. The destination file already exists.</string>
    <string name="dialog_media_not_found">annot download. The external media is not available.</string>
    <string name="download_no_application_title">Cannot open file</string>
    <string name="remove_download">Remove</string>
    <string name="delete_download">Delete</string>
    <string name="pause_download">Pause</string>
    <string name="resume_download">Resume</string>
    <string name="keep_queued_download">Keep</string>
    <string name="cancel_running_download">Cancel</string>
    <string name="retry_download">Retry</string>
    <string name="deselect_all">Clear selection</string>
    <string name="app_name">人人</string>
    <string name="from">3108001</string>
    <string name="pubdate">20120518</string>
    <string name="softid">100001</string>
    <string name="version">5.0.6</string>
    <string name="apikey">39c4cb63f0f2401abe116d5770bf83b8</string>
    <string name="secretkey">1f736f38e254488787643cfffe93b1a2</string>
    <string name="appid">185047</string>
    <string name="subproperty">0</string>
    <string name="permission_account_dis">同步人人网帐号密码</string>
    <string name="search_label">搜索好友</string>
    <string name="search_hint">请输入好友姓名</string>
    <string name="search_invoke">应用/搜索/调用 搜索</string>
    <string name="widget_name">人人 for Android</string>
    <string name="help">"1.通过侧栏进行全局导航。

 2.添加人人Android小部件，可以在手机桌面直接查看好友新鲜事、发状态、传照片和报到。

 3.在新鲜事首页和个人主页，可以从顶部操作栏进行分类查看。

 4.新鲜事页面和评论页面可以点击顶部操作栏空白处，快速返回顶部。

 5.新鲜事页面和评论页面可以下拉刷新页面内容。

 6.消息提醒、缓存清理、亮度调节等设置，可以在选项中进行。

"</string>
    <string name="share_blog_view_source">查看原文</string>
    <string name="share_blog_view_source_owner">查看源作者</string>
    <string name="action_log_out">com.renren.mobile.android.action.ACTION_LOG_OUT</string>
    <string name="action_log_in">com.renren.mobile.android.action.ACTION_LOG_IN</string>
    <string name="eula_title">免责声明</string>
    <string name="eula_message">您将要开始的应用是由人人网开发、拥有、运营的联网应用。摩托罗拉不承担该应用任何方面的任何责任，包括但不限于其性能、知识产权、支持、服务、内容及收费。该应用在使用过程中可能产生数据流量，该费用请参看移动运营商公布的收费标准。本服务的联网查询目前只面向已开通移动互联网服务的用户。</string>
    <string name="eula_refuse">拒绝</string>
    <string name="eula_accept">同意</string>
    <string name="share_via_renren">分享到人人</string>
    <string name="rapidpub_update_success">更新成功</string>
    <string name="loading">加载中...</string>
    <string name="preference_notification_syncinfo">通讯录提醒</string>
    <string name="preference_notification_syncinfo_summary">登录显示更新通讯录提醒</string>
    <string name="contact_syncinfo_head">同步好友信息</string>
    <string name="contact_syncinfo_title">"将人人网上的好友头像与
主页地址同步到您的通讯录"</string>
    <string name="synccontact_highqualityphoto">使用人人网高清头像同步</string>
    <string name="synccontact_synchronize">正在同步...</string>
    <string name="synccontact_delete_btn">删除同步信息</string>
    <string name="synccontact_delete">正在删除</string>
    <string name="preference_title">选项</string>
    <string name="preference_notification">提醒设置</string>
    <string name="preference_notification_enable">消息提醒</string>
    <string name="preference_notification_enable_summary">收到留言、评论或好友请求时提醒</string>
    <string name="preference_notification_vibration">振动</string>
    <string name="preference_notification_vibration_summary">收到提醒时振动</string>
    <string name="preference_notification_led">LED</string>
    <string name="preference_notification_led_summary">收到提醒时点亮LED灯</string>
    <string name="preference_notification_enable_ringtone">铃声提醒</string>
    <string name="preference_notification_enable_ringtone_summary">收到提醒时播放铃声</string>
    <string name="preference_notification_choose_ringtone">选择铃声</string>
    <string name="preference_notification_receive">消息接收</string>
    <string name="preference_notification_receive_summary">退出程序后仍能接收消息通知</string>
    <string name="preference_notification_sleep_mode">防打扰模式</string>
    <string name="preference_notification_sleep_mode_summary">00:00–7:00关闭消息通知</string>
    <string name="preference_data_usage">流量管理</string>
    <string name="preference_data_usage_show_news_feed_pics">新鲜事图片显示</string>
    <string name="preference_cache">缓存设置</string>
    <string name="preference_cache_clear_when_exit">退出时清空缓存</string>
    <string name="preference_cache_clear_immediately">立即清空缓存</string>
    <string name="preference_misc">其他</string>
    <string name="preference_misc_about">关于</string>
    <string name="preference_misc_about_summary">人人 Android</string>
    <string name="preference_misc_update">升级更新</string>
    <string name="preference_misc_help">帮助</string>
    <string name="preference_misc_feedback">意见反馈</string>
    <string name="preference_system_settings">系统设置</string>
    <string name="preference_system_settings_brightness">屏幕亮度</string>
    <string name="v5_0_1_guide_register">注册</string>
    <string name="v5_0_1_guide_register_retrieve_verifycode">重新获取</string>
    <string name="v5_0_1_guide_agree_use_contacts">同意使用您的通讯录</string>
    <string name="v5_0_1_guide_register_phone_account_hint">帐号：请输入11位手机号</string>
    <string name="v5_0_1_guide_register_phone_password_hint">密码：请输入6-20位字符</string>
    <string name="v5_0_1_guide_register_verify_code_hint">验证码：</string>
    <string name="about_text_view_layout_1">人人Android</string>
    <string name="about_text_view_layout_2">版本号:</string>
    <string name="about_text_view_layout_3">开发者: 人人网</string>
    <string name="about_text_view_layout_4">更多信息，请在人人网搜索并关注”人人Android”的公共主页。</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_1">完善个人信息</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_2">真实姓名:</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_3">性 别:</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_4">温馨提示：填上姓名后朋友们才知道你是谁哦</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_5">确定</string>
    <string name="v5_0_1_guide_recommend_append_name_info_layout_6">取消</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_1">完善资料</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_2">姓名：</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_3">真实姓名</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_4">性别：</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_5">选择性别</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_6">生日：</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_7">选择生日</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_8">阶段：</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_9">选择阶段</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_10">填上真实姓名后朋友们才知道你是谁哦</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_11">完成</string>
    <string name="v5_1_0_guide_perfect_information_layout_layout_12">取消</string>
</resources>