<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/preference_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_notification">
        <CheckBoxPreference android:title="@string/preference_notification_enable" android:key="bt_notify" android:summary="@string/preference_notification_enable_summary" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notification_receive" android:key="bt_notify_receive" android:summary="@string/preference_notification_receive_summary" android:dependency="bt_notify" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notification_vibration" android:key="bt_notify_vibrate" android:summary="@string/preference_notification_vibration_summary" android:dependency="bt_notify" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notification_led" android:key="bt_notify_led" android:summary="@string/preference_notification_led_summary" android:dependency="bt_notify" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notification_enable_ringtone" android:key="bt_notify_sound" android:summary="@string/preference_notification_enable_ringtone_summary" android:dependency="bt_notify" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/preference_notification_sleep_mode" android:key="bt_notify_sleep_mode" android:summary="@string/preference_notification_sleep_mode_summary" android:dependency="bt_notify" android:defaultValue="true" />
        <Preference android:title="@string/preference_notification_choose_ringtone" android:key="bt_ring_chooser" android:summary="@string/preference_notification_choose_ringtone" android:dependency="bt_notify_sound" />
        <CheckBoxPreference android:title="@string/preference_notification_syncinfo" android:key="bt_notify_sync" android:summary="@string/preference_notification_syncinfo_summary" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_system_settings">
        <Preference android:title="@string/preference_system_settings_brightness" android:key="bt_backlight" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_data_usage">
        <CheckBoxPreference android:title="@string/preference_data_usage_show_news_feed_pics" android:key="bt_show_newsfeed_photo" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_cache">
        <CheckBoxPreference android:title="@string/preference_cache_clear_when_exit" android:key="bt_on_exit_clean_cache" android:defaultValue="false" />
        <Preference android:title="@string/preference_cache_clear_immediately" android:key="bt_clear" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_misc">
        <Preference android:title="@string/preference_misc_feedback" android:key="bt_feedback" />
        <Preference android:title="@string/preference_misc_help" android:key="bt_help" />
        <Preference android:title="@string/preference_misc_about" android:key="bt_about" android:summary="@string/preference_misc_about_summary" />
        <Preference android:title="@string/preference_misc_update" android:key="bt_upgrade" />
    </PreferenceCategory>
</PreferenceScreen>
