<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:background="#99000000" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:background="@drawable/v5_0_1_guide_popup_box" android:layout_width="300.0dip" android:layout_height="wrap_content" android:fadeScrollbars="true">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:paddingTop="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="16.0sp" android:textColor="@color/v5_0_1_light_gray" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginLeft="16.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_1" />
                <ImageView android:background="@color/friend_item_name" android:layout_width="fill_parent" android:layout_height="2.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="15.0dip" android:layout_marginRight="24.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/v5_0_1_light_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_2" />
                <EditText android:textSize="14.0sp" android:id="@id/RealName" android:background="@drawable/v5_0_1_edittext_bg" android:paddingLeft="8.0dip" android:layout_width="wrap_content" android:layout_height="32.0dip" android:hint="@string/v5_1_0_guide_perfect_information_layout_layout_3" android:maxLines="1" android:singleLine="true" android:layout_weight="1.0" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/v5_0_1_light_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_4" />
                <Button android:textSize="14.0sp" android:gravity="left|center" android:id="@id/guide_perfect_info_gender" android:background="@drawable/v5_0_1_guide_recommend_button_background" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="32.0dip" android:hint="@string/v5_1_0_guide_perfect_information_layout_layout_5" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/v5_0_1_light_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_6" />
                <Button android:textSize="14.0sp" android:gravity="center_vertical" android:id="@id/guide_perfect_info_birthday" android:background="@drawable/v5_0_1_guide_recommend_button_background" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="32.0dip" android:hint="@string/v5_1_0_guide_perfect_information_layout_layout_7" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="24.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/v5_0_1_light_gray" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="6.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_8" />
                <Button android:textSize="14.0sp" android:gravity="center_vertical" android:id="@id/guide_perfect_info_stage" android:background="@drawable/v5_0_1_guide_recommend_button_background" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="32.0dip" android:hint="@string/v5_1_0_guide_perfect_information_layout_layout_9" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:layout_marginBottom="12.0dip">
                <TextView android:textSize="12.0sp" android:textColor="@color/friend_item_name" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_10" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:background="@color/v5_0_1_guide_complete_info" android:layout_width="fill_parent" android:layout_height="1.0dip" />
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="48.0dip">
                <TextView android:textSize="16.0sp" android:textColor="@color/v5_0_1_light_gray" android:gravity="center" android:id="@id/guide_perfect_info_sure" android:background="@drawable/v5_0_1_guide_completeinfo_popwindow_txt_background" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_11" android:layout_weight="1.0" />
                <TextView android:background="@color/v5_0_1_guide_complete_info" android:layout_width="1.0dip" android:layout_height="fill_parent" />
                <TextView android:textSize="16.0sp" android:textColor="@color/v5_0_1_light_gray" android:gravity="center" android:id="@id/guide_perfect_info_cancel" android:background="@drawable/v5_0_1_guide_completeinfo_popwindow_txt_background" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/v5_1_0_guide_perfect_information_layout_layout_12" android:layout_weight="1.0" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
