<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fadeScrollbars="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20.0dip"
            android:paddingTop="10.0dip"
            android:text="@string/about_text_view_layout_1"
            android:textColor="@color/white" />

        <TextView
            android:id="@id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20.0dip"
            android:paddingTop="15.0dip"
            android:text="@string/about_text_view_layout_2"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20.0dip"
            android:paddingTop="15.0dip"
            android:text="@string/about_text_view_layout_3"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="15.0dip"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip"
            android:paddingTop="15.0dip"
            android:text="@string/about_text_view_layout_4"
            android:textColor="@color/white" />
    </LinearLayout>

</ScrollView>