<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_gravity="center_horizontal" android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/background" android:paddingLeft="30.0dip" android:paddingTop="36.0dip" android:paddingRight="30.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:id="@id/synccontact_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/v5_0_1_contact_syncinfo" />
            <TextView android:textSize="14.0sp" android:textColor="@color/light_black" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/contact_syncinfo_title" />
            <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:id="@id/usehrphoto_layout" android:background="@drawable/v5_0_1_contact_layout_bg" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginTop="30.0dip">
                <TextView android:textSize="14.0sp" android:textColor="@color/light_black" android:id="@id/usehrphoto_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/synccontact_highqualityphoto" />
                <CheckBox android:id="@id/synccontact_usehightphoto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:button="@drawable/v5_0_1_check_box" />
            </LinearLayout>
            <FrameLayout android:layout_gravity="center" android:id="@id/syncinfo_framelayout" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginTop="32.0dip">
                <ProgressBar android:id="@id/syncinfo_progressbar" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="1.0dip" android:progressDrawable="@drawable/v5_0_1_contact_syncbar_bg" style="?android:attr/progressBarStyleHorizontal" />
                <TextView android:textSize="16.0sp" android:textColor="@color/light_black" android:gravity="center" android:id="@id/syncinfo_tip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="1.0dip" android:text="@string/synccontact_synchronize" />
                <Button android:textSize="16.0sp" android:textColor="@color/button_text" android:id="@id/syncinfo_btn" android:background="@drawable/v5_0_1_common_button_2_seletor" android:layout_width="fill_parent" android:layout_height="38.0dip" android:text="@string/contact_syncinfo_head" />
            </FrameLayout>
            <FrameLayout android:layout_gravity="center" android:id="@id/deleinfo_framelayout" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginTop="12.0dip">
                <ProgressBar android:id="@id/deleinfo_progressbar" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="1.0dip" android:progressDrawable="@drawable/v5_0_1_contact_delebar_bg" style="?android:attr/progressBarStyleHorizontal" />
                <TextView android:textSize="16.0sp" android:textColor="@color/light_black" android:gravity="center" android:id="@id/deleinfo_tip" android:layout_width="fill_parent" android:layout_height="36.0dip" android:layout_marginBottom="1.0dip" android:text="@string/synccontact_delete" />
                <Button android:textSize="16.0sp" android:textColor="@color/button_text" android:id="@id/deleinfo_btn" android:background="@drawable/v5_0_1_common_button_2_seletor" android:layout_width="fill_parent" android:layout_height="38.0dip" android:text="@string/synccontact_delete_btn" />
            </FrameLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>
