<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@color/background" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <EditText android:enabled="true" android:textSize="14.0sp" android:textColorHint="@color/activity_from" android:id="@id/phone_register_account_content" android:background="@drawable/v5_0_1_edittext_bg" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:hint="@string/v5_0_1_guide_register_phone_account_hint" android:singleLine="true" android:maxLength="11" android:inputType="phone" android:imeOptions="actionNext" />
        <EditText android:enabled="true" android:textSize="14.0sp" android:textColorHint="@color/activity_from" android:id="@id/phone_register_account_password" android:background="@drawable/v5_0_1_edittext_bg" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="40.0dip" android:hint="@string/v5_0_1_guide_register_phone_password_hint" android:password="true" android:maxLength="20" android:inputType="textPassword" android:imeOptions="actionDone" />
        <LinearLayout android:id="@id/layout_show_code" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="40.0dip">
            <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:id="@id/guide_phone_message_code_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8.0dip" android:text="@string/v5_0_1_guide_register_verify_code_hint" />
            <EditText android:id="@id/guide_phone_message_code" android:background="@drawable/v5_0_1_edittext_bg" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="8.0dip" android:maxLength="5" android:layout_weight="1.0" android:inputType="number" />
            <Button android:textSize="14.0sp" android:textColor="@color/button_text" android:id="@id/guide_phone_code_btn" android:background="@drawable/v5_0_1_common_button_2_seletor" android:paddingLeft="8.0dip" android:paddingRight="8.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="40.0dip" android:text="@string/v5_0_1_guide_register_retrieve_verifycode" />
        </LinearLayout>
        <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/phone_account_register_btn" android:background="@drawable/v5_0_1_button_background" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="40.0dip" android:text="@string/v5_0_1_guide_register" />
        <LinearLayout android:orientation="horizontal" android:id="@id/layout_guide_phone_register_is_agree" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="12.0dip">
            <CheckBox android:id="@id/guide_phone_check_checkbox" android:layout_width="20.0dip" android:layout_height="20.0dip" android:layout_marginRight="8.0dip" android:checked="true" android:button="@drawable/v5_0_1_check_box" />
            <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:layout_gravity="center_vertical" android:id="@id/guide_phone_check_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/v5_0_1_guide_agree_use_contacts" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
